# sem-epe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: benchmark_fit.py  benchmark_rerender.py  fit_pillar_grid.py  pillars_on_segments.py  render_lines_pillars.py  rerender_benchmark.py  segments_under_holes.py
sem_epe/: __init__.py  align.py  fit.py  image.py  render.py  tune.py  vis.py
tests/: test_align.py  test_render.py  test_tune.py
